Simplified environment.yml, test run

--- a/notebooks/exploratory/1_LEF_download_preprocess_cfs_cms.ipynb
+++ b/notebooks/exploratory/1_LEF_download_preprocess_cfs_cms.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# Path to download data to\n",
-    "dir = 'C:/Users/fitzpatrick/Desktop/Data/'\n",
+    "dir = '/Users/dannes/Documents/NBS-Predictor-MVP-Dev/NBS-Predictor-MVP-test/Data/'\n",
     "# Location of the mask file\n",
     "mask_file = dir + 'Input/GL_mask.nc'\n",
     "\n",
@@ -473,7 +473,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting from: 2024-09-03 and continuing through: 2024-09-10\n"
+      "Creating new files.\n",
+      "Starting from: 2024-08-31 and continuing through: 2024-08-31\n"
      ]
     }
    ],
@@ -536,22 +537,172 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beginning 20240903.\n",
-      "Done with 20240903.\n",
-      "Beginning 20240904.\n",
-      "Done with 20240904.\n",
-      "Beginning 20240905.\n",
-      "Done with 20240905.\n",
-      "Beginning 20240906.\n",
-      "Done with 20240906.\n",
-      "Beginning 20240907.\n",
-      "Done with 20240907.\n",
-      "Beginning 20240908.\n",
-      "Done with 20240908.\n",
-      "Beginning 20240909.\n",
-      "Done with 20240909.\n",
-      "Beginning 20240910.\n",
-      "Done with 20240910.\n"
+      "Beginning 20240831.\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202408.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/pgbf.01.2024083100.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202408.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/00/monthly_grib_01/flxf.01.2024083100.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/pgbf.01.2024083106.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/06/monthly_grib_01/flxf.01.2024083106.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/pgbf.01.2024083112.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/12/monthly_grib_01/flxf.01.2024083112.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/pgbf.01.2024083118.202506.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202409.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202410.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202411.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202412.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202501.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202502.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202503.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202504.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202505.avrg.grib.grb2\n",
+      "Downloaded: cfs.20240831/18/monthly_grib_01/flxf.01.2024083118.202506.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202505.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202503.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202506.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202408.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202501.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202410.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202411.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202411.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202504.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202412.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202506.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202506.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202410.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202410.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202411.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202409.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202411.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202411.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202408.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202410.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202506.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202503.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202505.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202411.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202410.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202410.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202506.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202506.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202412.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202504.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202502.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202504.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202504.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202412.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202412.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202503.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202505.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202506.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202410.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202504.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202412.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202503.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202503.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202505.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202505.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202411.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202501.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202410.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202506.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202502.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202505.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202412.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202412.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202503.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202504.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202504.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083100.202501.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083100.202411.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202409.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083118.202502.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083112.202505.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083106.202505.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202412.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083106.202503.avrg.grib.grb2\n",
+      "Done with pgbf.01.2024083112.202503.avrg.grib.grb2\n",
+      "Done with flxf.01.2024083118.202504.avrg.grib.grb2\n",
+      "Done with 20240831.\n"
      ]
     }
    ],
@@ -614,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
