--- a/notebooks/exploratory/0_LEF_model_training_cms_2.ipynb
+++ b/notebooks/exploratory/0_LEF_model_training_cms_2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -355,11 +355,11 @@
      "output_type": "stream",
      "text": [
       "               su_pcp_w    er_pcp_w    on_pcp_w     mh_pcp_w     su_pcp_l  \\\n",
+      "1979-01-01  1418.815517  480.493648  435.053300  2731.419734  1908.337758   \n",
       "1979-02-01  1725.202776  307.523427  174.595630  1647.644403  2994.613464   \n",
       "1979-03-01  2985.410905  502.023507  216.720716  3366.383104  6179.396933   \n",
       "1979-04-01  1833.850353  771.898492  361.687857  3439.840263  3900.078255   \n",
       "1979-05-01  2518.523016  599.135634  264.458043  2364.981209  5220.389769   \n",
-      "1979-06-01  2927.137756  395.267754  202.659087  1864.819393  5602.199907   \n",
       "...                 ...         ...         ...          ...          ...   \n",
       "2010-08-01  1537.159708  156.390801  133.331169  1160.518649  3422.201604   \n",
       "2010-09-01  2935.872420  281.306113  243.609570  2866.455046  7201.816009   \n",
@@ -368,11 +368,11 @@
       "2010-12-01  1106.622457  311.816611  284.541208  2060.855935  2527.814144   \n",
       "\n",
       "               er_pcp_l     on_pcp_l      mh_pcp_l    su_evap_w   er_evap_w  \\\n",
+      "1979-01-01  2667.669705  3916.176779   8036.334636  2221.948656  197.307398   \n",
       "1979-02-01  1833.651418  1848.508659   4599.198067  1206.368877  185.093925   \n",
       "1979-03-01  3122.718302  2168.768074  12369.684681   687.058922   51.106576   \n",
       "1979-04-01  4203.192412  3347.040605  10925.668866   339.531752   85.201176   \n",
       "1979-05-01  3569.127451  2594.097601   9747.586888   -25.832286  110.579591   \n",
-      "1979-06-01  2959.050909  2041.493178   8656.297711  -266.550944  157.268096   \n",
       "...                 ...          ...           ...          ...         ...   \n",
       "2010-08-01   830.806721  2028.928838   4696.342518   663.180124  359.738536   \n",
       "2010-09-01  1571.877797  2885.989172  10068.495380  1048.561240  442.253856   \n",
@@ -380,57 +380,44 @@
       "2010-11-01  3236.291721  2539.089961   6993.751048  1505.226102  291.818125   \n",
       "2010-12-01  1740.726215  2638.480677   6145.291828  1981.464961  326.894299   \n",
       "\n",
-      "            ...  on_evap_l_lag1  mh_evap_l_lag1  su_tmp_w_lag1  er_tmp_w_lag1  \\\n",
-      "1979-02-01  ...      921.807095     2252.984922          262.3          267.6   \n",
-      "1979-03-01  ...      882.614321     2023.052319          261.6          265.1   \n",
-      "1979-04-01  ...      726.316907     2980.383207          268.5          273.4   \n",
-      "1979-05-01  ...     1157.422723     4247.412089          272.5          276.9   \n",
-      "1979-06-01  ...     1676.184313     7073.202234          276.7          282.0   \n",
-      "...         ...             ...             ...            ...            ...   \n",
-      "2010-08-01  ...     2436.021762    11413.671448          289.5          296.9   \n",
-      "2010-09-01  ...     2002.362217     8347.277000          291.1          296.4   \n",
-      "2010-10-01  ...     1607.903419     5708.697804          284.7          291.4   \n",
-      "2010-11-01  ...     1405.537535     4131.552359          281.9          286.0   \n",
-      "2010-12-01  ...     1065.453413     3238.565015          276.0          279.8   \n",
+      "            ...    on_evap_l    mh_evap_l  su_tmp_w  er_tmp_w  on_tmp_w  \\\n",
+      "1979-01-01  ...   921.807095  2252.984922     262.3     267.6     267.7   \n",
+      "1979-02-01  ...   882.614321  2023.052319     261.6     265.1     263.0   \n",
+      "1979-03-01  ...   726.316907  2980.383207     268.5     273.4     274.6   \n",
+      "1979-04-01  ...  1157.422723  4247.412089     272.5     276.9     277.5   \n",
+      "1979-05-01  ...  1676.184313  7073.202234     276.7     282.0     283.3   \n",
+      "...         ...          ...          ...       ...       ...       ...   \n",
+      "2010-08-01  ...  2002.362217  8347.277000     291.1     296.4     295.1   \n",
+      "2010-09-01  ...  1607.903419  5708.697804     284.7     291.4     290.5   \n",
+      "2010-10-01  ...  1405.537535  4131.552359     281.9     286.0     284.8   \n",
+      "2010-11-01  ...  1065.453413  3238.565015     276.0     279.8     278.6   \n",
+      "2010-12-01  ...  1208.969958  3154.227079     269.0     271.2     270.8   \n",
       "\n",
-      "            on_tmp_w_lag1  mh_tmp_w_lag1  su_tmp_l_lag1  er_tmp_l_lag1  \\\n",
-      "1979-02-01          267.7         265.95          255.1          265.7   \n",
-      "1979-03-01          263.0         264.15          255.9          263.5   \n",
-      "1979-04-01          274.6         271.70          266.1          274.4   \n",
-      "1979-05-01          277.5         275.50          271.4          277.9   \n",
-      "1979-06-01          283.3         279.95          278.4          284.9   \n",
-      "...                   ...            ...            ...            ...   \n",
-      "2010-08-01          295.4         293.80          291.7          296.2   \n",
-      "2010-09-01          295.1         294.45          291.7          295.8   \n",
-      "2010-10-01          290.5         288.80          283.2          290.7   \n",
-      "2010-11-01          284.8         284.65          279.5          285.0   \n",
-      "2010-12-01          278.6         278.60          272.6          278.0   \n",
+      "            mh_tmp_w  su_tmp_l  er_tmp_l  on_tmp_l  mh_tmp_l  \n",
+      "1979-01-01    265.95     255.1     265.7     265.6    262.00  \n",
+      "1979-02-01    264.15     255.9     263.5     260.4    259.80  \n",
+      "1979-03-01    271.70     266.1     274.4     274.0    270.65  \n",
+      "1979-04-01    275.50     271.4     277.9     277.7    275.25  \n",
+      "1979-05-01    279.95     278.4     284.9     284.5    281.80  \n",
+      "...              ...       ...       ...       ...       ...  \n",
+      "2010-08-01    294.45     291.7     295.8     293.7    294.00  \n",
+      "2010-09-01    288.80     283.2     290.7     289.1    287.30  \n",
+      "2010-10-01    284.65     279.5     285.0     282.8    282.50  \n",
+      "2010-11-01    278.60     272.6     278.0     276.5    275.80  \n",
+      "2010-12-01    270.95     264.5     269.4     268.6    267.95  \n",
       "\n",
-      "            on_tmp_l_lag1  mh_tmp_l_lag1  \n",
-      "1979-02-01          265.6         262.00  \n",
-      "1979-03-01          260.4         259.80  \n",
-      "1979-04-01          274.0         270.65  \n",
-      "1979-05-01          277.7         275.25  \n",
-      "1979-06-01          284.5         281.80  \n",
-      "...                   ...            ...  \n",
-      "2010-08-01          294.7         294.05  \n",
-      "2010-09-01          293.7         294.00  \n",
-      "2010-10-01          289.1         287.30  \n",
-      "2010-11-01          282.8         282.50  \n",
-      "2010-12-01          276.5         275.80  \n",
-      "\n",
-      "[383 rows x 48 columns]\n"
+      "[384 rows x 24 columns]\n"
      ]
     }
    ],
    "source": [
-    "lagged_X = create_lagged_variables(X, lags=1)\n",
+    "lagged_X = create_lagged_variables(X, lags=0)\n",
     "print (lagged_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,16 +522,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X_train: (306, 48)\n",
-      "Shape of y_train: (306, 12)\n",
-      "Shape of X_test: (77, 48)\n",
+      "Shape of X_train: (307, 24)\n",
+      "Shape of y_train: (307, 12)\n",
+      "Shape of X_test: (77, 24)\n",
       "Shape of y_test: (77, 12)\n"
      ]
     }
@@ -566,15 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(306, 48)\n",
-      "(77, 48)\n"
+      "(307, 24)\n",
+      "(77, 24)\n"
      ]
     }
    ],
@@ -710,29 +697,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The r squared value for the model is 0.776036270114854\n",
-      "Mean Squared Error: 78431.12444419645\n",
-      "        Target         Feature  Coefficient  Absolute Importance\n",
-      "0    su_evap_y   on_tmp_w_lag1  -286.617750           286.617750\n",
-      "1    su_evap_y   er_tmp_w_lag1   189.563720           189.563720\n",
-      "2    su_evap_y   on_tmp_l_lag1   180.238058           180.238058\n",
-      "3    su_evap_y   er_tmp_l_lag1  -135.715438           135.715438\n",
-      "4    su_evap_y        er_tmp_w   -90.550113            90.550113\n",
-      "..         ...             ...          ...                  ...\n",
-      "571  mh_runoff  mh_evap_l_lag1    -0.044336             0.044336\n",
-      "572  mh_runoff   su_pcp_w_lag1    -0.042586             0.042586\n",
-      "573  mh_runoff   er_pcp_l_lag1     0.035229             0.035229\n",
-      "574  mh_runoff   su_pcp_l_lag1     0.004302             0.004302\n",
-      "575  mh_runoff       on_evap_l    -0.001247             0.001247\n",
+      "The r squared value for the model is 0.7928967886474544\n",
+      "Mean Squared Error: 81225.71925476432\n",
+      "        Target    Feature  Coefficient  Absolute Importance\n",
+      "0    su_evap_y   er_tmp_l  -335.863058           335.863058\n",
+      "1    su_evap_y   mh_tmp_l   252.815595           252.815595\n",
+      "2    su_evap_y   er_tmp_w   217.387312           217.387312\n",
+      "3    su_evap_y   on_tmp_w  -113.960848           113.960848\n",
+      "4    su_evap_y   su_tmp_w  -102.929577           102.929577\n",
+      "..         ...        ...          ...                  ...\n",
+      "283  mh_runoff  mh_evap_l    -0.099040             0.099040\n",
+      "284  mh_runoff   er_pcp_l     0.064508             0.064508\n",
+      "285  mh_runoff   on_pcp_l     0.038122             0.038122\n",
+      "286  mh_runoff   su_pcp_l     0.030721             0.030721\n",
+      "287  mh_runoff   mh_pcp_w     0.007838             0.007838\n",
       "\n",
-      "[576 rows x 4 columns]\n"
+      "[288 rows x 4 columns]\n"
      ]
     }
    ],
