edit to comments for clarity in unit conversions

--- a/notebooks/production/0_LEF_model_training_cms.ipynb
+++ b/notebooks/production/0_LEF_model_training_cms.ipynb
@@ -74,18 +74,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_mm_to_m3_per_sec(df):\n",
+    "def convert_kg_to_m3_per_sec(df):\n",
     "\n",
     "    # Calculate the number of seconds for each month\n",
     "    df['seconds'] = df.apply(lambda row: seconds_in_month(int(row['year']), int(row['month'])), axis=1)\n",
     "\n",
-    "    # Convert millimeters to meters\n",
+    "    # Convert kg to m3 by dividing by the density of water 1000 kg/m3\n",
     "    df['WaterErie_m3'] = df['WaterErie'] / 1000\n",
     "    df['WaterOntario_m3'] = df['WaterOntario'] / 1000\n",
     "    df['WaterSuperior_m3'] = df['WaterSuperior'] / 1000\n",
     "    df['WaterMichHuron_m3'] = (df['WaterMichigan'] + df['WaterHuron']) / 1000\n",
     "\n",
-    "    # Convert the data to cubic meters per second\n",
+    "    # Convert m3 to cms by dividing by the number of seconds in a month\n",
     "    df['WaterErie_cms'] = df['WaterErie_m3'] / df['seconds']\n",
     "    df['WaterOntario_cms'] = df['WaterOntario_m3'] / df['seconds']\n",
     "    df['WaterSuperior_cms'] = df['WaterSuperior_m3'] / df['seconds']\n",
@@ -165,11 +165,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert Total Precipitation to cms\n",
-    "data_1 = convert_mm_to_m3_per_sec(data_1)\n",
+    "# Convert Total Precipitation and Evaporation [kg] to [cms]\n",
+    "data_1 = convert_kg_to_m3_per_sec(data_1)\n",
     "\n",
     "# Convert Total Evaporation to cms\n",
-    "data_2 = convert_mm_to_m3_per_sec(data_2)"
+    "data_2 = convert_kg_to_m3_per_sec(data_2)"
    ]
   },
   {
