added aws/ncei option

--- a/notebooks/production/0_LEF_model_training_cms.ipynb
+++ b/notebooks/production/0_LEF_model_training_cms.ipynb
@@ -35,14 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "User Input"
+    "## User Input"
    ]
   },
   {
@@ -53,6 +46,13 @@
    "source": [
     "# This is the directory where the CFSR and GLCC files are located\n",
     "dir = 'C:/Users/fitzpatrick/Desktop/Data/Input/'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
    ]
   },
   {
